cloudformation/pizza-cloud-former.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Resources": {
        "vpc0f2c3a66": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "pizza-vpc-cloudformation"
                    }
                ]
            }
        },
        "subnet6fbc8106": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.1.0/24",
                "AvailabilityZone": "eu-west-3b",
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "pizza-subnet-b"
                    }
                ]
            }
        },
        "subnetc6f5a1bd": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "AvailabilityZone": "eu-west-3a",
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "pizza-subnet-a"
                    }
                ]
            }
        },
        "igw0bc204cde687c1fa5": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
            }
        },
        "dopt1ef1ee77": {
            "Type": "AWS::EC2::DHCPOptions",
            "Properties": {
                "DomainName": "eu-west-3.compute.internal",
                "DomainNameServers": [
                    "AmazonProvidedDNS"
                ]
            }
        },
        "acl31a3bb58": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                }
            }
        },
        "rtb055bd42c8eb2c6b95": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                }
            }
        },
        "rtb248d6b4c": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                }
            }
        },
        "rtb0944a83421d25bb2f": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                }
            }
        },
        "eip1518825519": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": [
                "gw1"
            ],
            "Properties": {
                "Domain": "vpc"
            }
        },
        "elbpizzaloader": {
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
            "DependsOn": "gw1",
            "Properties": {
                "Subnets": [
                    {
                        "Ref": "subnet6fbc8106"
                    },
                    {
                        "Ref": "subnetc6f5a1bd"
                    }
                ],
                "HealthCheck": {
                    "HealthyThreshold": "10",
                    "Interval": "30",
                    "Target": "HTTP:3000/",
                    "Timeout": "5",
                    "UnhealthyThreshold": "2"
                },
                "ConnectionDrainingPolicy": {
                    "Enabled": "true",
                    "Timeout": "300"
                },
                "ConnectionSettings": {
                    "IdleTimeout": "60"
                },
                "CrossZone": "true",
                "SecurityGroups": [
                    {
                        "Ref": "sgpizzalbsg"
                    }
                ],
                "Listeners": [
                    {
                        "InstancePort": "3000",
                        "LoadBalancerPort": "80",
                        "Protocol": "HTTP",
                        "InstanceProtocol": "HTTP",
                        "PolicyNames": [
                            "AWSConsole-LBCookieStickinessPolicy-pizza-loader-1467924383840"
                        ]
                    }
                ],
                "LBCookieStickinessPolicy": [
                    {
                        "PolicyName": "AWSConsole-LBCookieStickinessPolicy-pizza-loader-1467924383840",
                        "CookieExpirationPeriod": "86400"
                    }
                ]
            }
        },
        "asgpizzascaler": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "AvailabilityZones": [
                    "eu-west-3a",
                    "eu-west-3b"
                ],
                "Cooldown": "300",
                "DesiredCapacity": "2",
                "HealthCheckGracePeriod": "300",
                "HealthCheckType": "EC2",
                "MaxSize": "4",
                "MinSize": "2",
                "VPCZoneIdentifier": [
                    {
                        "Ref": "subnetc6f5a1bd"
                    },
                    {
                        "Ref": "subnet6fbc8106"
                    }
                ],
                "NotificationConfigurations": [
                    {
                        "TopicARN": "arn:aws:sns:eu-west-3:241369606124:pizza-luvrs-email",
                        "NotificationTypes": [
                            "autoscaling:EC2_INSTANCE_LAUNCH",
                            "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
                            "autoscaling:EC2_INSTANCE_TERMINATE",
                            "autoscaling:EC2_INSTANCE_TERMINATE_ERROR"
                        ]
                    }
                ],
                "LaunchConfigurationName": {
                    "Ref": "lcpizzalauncherfinalrds"
                },
                "TerminationPolicies": [
                    "Default"
                ]
            }
        },
        "lcpizzalauncherfinalrds": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
                "AssociatePublicIpAddress": true,
                "ImageId": "ami-078b4e01043f420eb",
                "InstanceType": "t2.micro",
                "KeyName": "pizza-keys",
                "IamInstanceProfile": "pizza-ec2-role",
                "SecurityGroups": [
                    {
                        "Ref": "sgpizzaec2sg"
                    }
                ],
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/xvda",
                        "Ebs": {
                            "SnapshotId": "snap-0bdbef2fbb1058772",
                            "VolumeSize": 8
                        }
                    }
                ]
            }
        },
        "rdspizzadb": {
            "Type": "AWS::RDS::DBInstance",
            "Properties": {
                "AllocatedStorage": "5",
                "AllowMajorVersionUpgrade": "false",
                "AutoMinorVersionUpgrade": "true",
                "DBInstanceClass": "db.t2.micro",
                "Port": "5432",
                "PubliclyAccessible": "true",
                "StorageType": "gp2",
                "BackupRetentionPeriod": "7",
                "MasterUsername": "postgres",
                "MasterUserPassword": "MyPassword",
                "PreferredBackupWindow": "11:26-11:56",
                "PreferredMaintenanceWindow": "thu:00:55-thu:01:25",
                "DBName": "MyDatabase",
                "Engine": "postgres",
                "EngineVersion": "11.5",
                "LicenseModel": "postgresql-license",
                "DBSubnetGroupName": {
                    "Ref": "dbsubnetdefault"
                },
                "VPCSecurityGroups": [
                    {
                        "Ref": "sgdefault"
                    }
                ]
            }
        },
        "tabletoppings": {
            "Type": "AWS::DynamoDB::Table",
            "Properties": {
                "AttributeDefinitions": [
                    {
                        "AttributeName": "id",
                        "AttributeType": "S"
                    }
                ],
                "KeySchema": [
                    {
                        "AttributeName": "id",
                        "KeyType": "HASH"
                    }
                ],
                "ProvisionedThroughput": {
                    "ReadCapacityUnits": "5",
                    "WriteCapacityUnits": "5"
                }
            }
        },
        "tableusers": {
            "Type": "AWS::DynamoDB::Table",
            "Properties": {
                "AttributeDefinitions": [
                    {
                        "AttributeName": "username",
                        "AttributeType": "S"
                    }
                ],
                "KeySchema": [
                    {
                        "AttributeName": "username",
                        "KeyType": "HASH"
                    }
                ],
                "ProvisionedThroughput": {
                    "ReadCapacityUnits": "5",
                    "WriteCapacityUnits": "5"
                }
            }
        },
        "s3pizzaluvrsbmlam": {
            "Type": "AWS::S3::Bucket",
            "Properties": {
                "AccessControl": "Private",
                "CorsConfiguration": {
                    "CorsRules": [
                        {
                            "AllowedHeaders": [
                                "*"
                            ],
                            "AllowedMethods": [
                                "GET"
                            ],
                            "AllowedOrigins": [
                                "*"
                            ],
                            "MaxAge": "3000"
                        }
                    ]
                },
                "VersioningConfiguration": {
                    "Status": "Suspended"
                }
            }
        },
        "dbsubnetdefault": {
            "Type": "AWS::RDS::DBSubnetGroup",
            "Properties": {
                "DBSubnetGroupDescription": "Created from the RDS Management Console",
                "SubnetIds": [
                    {
                        "Ref": "subnet6fbc8106"
                    },
                    {
                        "Ref": "subnetc6f5a1bd"
                    }
                ]
            }
        },
        "topicdynamodb": {
            "Type": "AWS::SNS::Topic",
            "Properties": {
                "DisplayName": "dynamodb"
            }
        },
        "topicpizzaluvrsemail": {
            "Type": "AWS::SNS::Topic",
            "Properties": {
                "DisplayName": "pizza-luvrs-email",
                "Subscription": [
                    {
                        "Endpoint": "lamine.bendib@gmail.com",
                        "Protocol": "email"
                    }
                ]
            }
        },
        "sgpizzaec2sg": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Security group for pizza lover EC2 instances",
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                }
            }
        },
        "sgdefault": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "default VPC security group",
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                }
            }
        },
        "sgpizzalbsg": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Pizza load balancer security group",
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                }
            }
        },
        "snspolicydynamodb": {
            "Type": "AWS::SNS::TopicPolicy",
            "Properties": {
                "Topics": [
                    {
                        "Ref": "topicdynamodb"
                    }
                ],
                "PolicyDocument": {
                    "Version": "2008-10-17",
                    "Id": "__default_policy_ID",
                    "Statement": [
                        {
                            "Sid": "__default_statement_ID",
                            "Effect": "Allow",
                            "Principal": {
                                "AWS": "*"
                            },
                            "Action": [
                                "SNS:GetTopicAttributes",
                                "SNS:SetTopicAttributes",
                                "SNS:AddPermission",
                                "SNS:RemovePermission",
                                "SNS:DeleteTopic",
                                "SNS:Subscribe",
                                "SNS:ListSubscriptionsByTopic",
                                "SNS:Publish",
                                "SNS:Receive"
                            ],
                            "Resource": {
                                "Ref": "topicdynamodb"
                            },
                            "Condition": {
                                "StringEquals": {
                                    "AWS:SourceOwner": "241369606124"
                                }
                            }
                        }
                    ]
                }
            }
        },
        "snspolicypizzaluvrsemail": {
            "Type": "AWS::SNS::TopicPolicy",
            "Properties": {
                "Topics": [
                    {
                        "Ref": "topicpizzaluvrsemail"
                    }
                ],
                "PolicyDocument": {
                    "Version": "2008-10-17",
                    "Id": "__default_policy_ID",
                    "Statement": [
                        {
                            "Sid": "__default_statement_ID",
                            "Effect": "Allow",
                            "Principal": {
                                "AWS": "*"
                            },
                            "Action": [
                                "SNS:GetTopicAttributes",
                                "SNS:SetTopicAttributes",
                                "SNS:AddPermission",
                                "SNS:RemovePermission",
                                "SNS:DeleteTopic",
                                "SNS:Subscribe",
                                "SNS:ListSubscriptionsByTopic",
                                "SNS:Publish",
                                "SNS:Receive"
                            ],
                            "Resource": {
                                "Ref": "topicpizzaluvrsemail"
                            },
                            "Condition": {
                                "StringEquals": {
                                    "AWS:SourceOwner": "241369606124"
                                }
                            }
                        }
                    ]
                }
            }
        },
        "s3policypizzaluvrsbmlam": {
            "Type": "AWS::S3::BucketPolicy",
            "Properties": {
                "Bucket": {
                    "Ref": "s3pizzaluvrsbmlam"
                },
                "PolicyDocument": {
                    "Version": "2012-10-17",
                    "Id": "Policy1585479172203",
                    "Statement": [
                        {
                            "Sid": "Stmt1585479171247",
                            "Effect": "Allow",
                            "Principal": "*",
                            "Action": "s3:GetObject",
                            "Resource": {
                                "Fn::Join": [
                                    "",
                                    [
                                        "arn:aws:s3:::",
                                        {
                                            "Ref": "s3pizzaluvrsbmlam"
                                        },
                                        "/*"
                                    ]
                                ]
                            }
                        }
                    ]
                }
            }
        },
        "scalingScaledown": {
            "Type": "AWS::AutoScaling::ScalingPolicy",
            "Properties": {
                "AdjustmentType": "ChangeInCapacity",
                "PolicyType": "SimpleScaling",
                "ScalingAdjustment": -1,
                "AutoScalingGroupName": {
                    "Ref": "asgpizzascaler"
                }
            }
        },
        "scalingScaleup": {
            "Type": "AWS::AutoScaling::ScalingPolicy",
            "Properties": {
                "AdjustmentType": "ChangeInCapacity",
                "PolicyType": "SimpleScaling",
                "ScalingAdjustment": 1,
                "AutoScalingGroupName": {
                    "Ref": "asgpizzascaler"
                }
            }
        },
        "alarmawsec2pizzascalerCPUUtilizationHigh": {
            "Type": "AWS::CloudWatch::Alarm",
            "Properties": {
                "ActionsEnabled": "true",
                "ComparisonOperator": "GreaterThanOrEqualToThreshold",
                "EvaluationPeriods": "1",
                "MetricName": "CPUUtilization",
                "Namespace": "AWS/EC2",
                "Period": "300",
                "Statistic": "Average",
                "Threshold": "60.0",
                "AlarmActions": [
                    {
                        "Ref": "scalingScaleup"
                    }
                ],
                "Dimensions": [
                    {
                        "Name": "AutoScalingGroupName",
                        "Value": "pizza-scaler"
                    }
                ]
            }
        },
        "alarmawsec2pizzascalerHighCPUUtilization": {
            "Type": "AWS::CloudWatch::Alarm",
            "Properties": {
                "ActionsEnabled": "true",
                "ComparisonOperator": "LessThanThreshold",
                "EvaluationPeriods": "1",
                "MetricName": "CPUUtilization",
                "Namespace": "AWS/EC2",
                "Period": "300",
                "Statistic": "Average",
                "Threshold": "60.0",
                "AlarmActions": [
                    {
                        "Ref": "scalingScaledown"
                    }
                ],
                "Dimensions": [
                    {
                        "Name": "AutoScalingGroupName",
                        "Value": "pizza-scaler"
                    }
                ]
            }
        },
        "acl1": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": "true",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "acl31a3bb58"
                }
            }
        },
        "acl2": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "acl31a3bb58"
                }
            }
        },
        "subnetacl1": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "acl31a3bb58"
                },
                "SubnetId": {
                    "Ref": "subnetc6f5a1bd"
                }
            }
        },
        "subnetacl2": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": {
                    "Ref": "acl31a3bb58"
                },
                "SubnetId": {
                    "Ref": "subnetc6f5a1bd"
                }
            }
        },
        "gw1": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                },
                "InternetGatewayId": {
                    "Ref": "igw0bc204cde687c1fa5"
                }
            }
        },
        "subnetroute1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "rtb055bd42c8eb2c6b95"
                },
                "SubnetId": {
                    "Ref": "subnetc6f5a1bd"
                }
            }
        },
        "route1": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "rtb055bd42c8eb2c6b95"
                },
                "GatewayId": {
                    "Ref": "igw0bc204cde687c1fa5"
                }
            },
            "DependsOn": "gw1"
        },
        "dchpassoc1": {
            "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc0f2c3a66"
                },
                "DhcpOptionsId": {
                    "Ref": "dopt1ef1ee77"
                }
            }
        },
        "ingress1": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgpizzaec2sg"
                },
                "IpProtocol": "tcp",
                "FromPort": "22",
                "ToPort": "22",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "ingress2": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgpizzaec2sg"
                },
                "IpProtocol": "tcp",
                "FromPort": "3000",
                "ToPort": "3000",
                "SourceSecurityGroupId": {
                    "Ref": "sgpizzalbsg"
                },
                "SourceSecurityGroupOwnerId": "241369606124"
            }
        },
        "ingress3": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgdefault"
                },
                "IpProtocol": "tcp",
                "FromPort": "5432",
                "ToPort": "5432",
                "SourceSecurityGroupId": {
                    "Ref": "sgpizzaec2sg"
                },
                "SourceSecurityGroupOwnerId": "241369606124"
            }
        },
        "ingress4": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgdefault"
                },
                "IpProtocol": "tcp",
                "FromPort": "5432",
                "ToPort": "5432",
                "CidrIp": "90.107.2.53/32"
            }
        },
        "ingress5": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgdefault"
                },
                "IpProtocol": "-1",
                "SourceSecurityGroupId": {
                    "Ref": "sgdefault"
                },
                "SourceSecurityGroupOwnerId": "241369606124"
            }
        },
        "ingress6": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgpizzalbsg"
                },
                "IpProtocol": "tcp",
                "FromPort": "80",
                "ToPort": "80",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "egress1": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgpizzaec2sg"
                },
                "IpProtocol": "-1",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "egress2": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgdefault"
                },
                "IpProtocol": "-1",
                "CidrIp": "0.0.0.0/0"
            }
        },
        "egress3": {
            "Type": "AWS::EC2::SecurityGroupEgress",
            "Properties": {
                "GroupId": {
                    "Ref": "sgpizzalbsg"
                },
                "IpProtocol": "-1",
                "CidrIp": "0.0.0.0/0"
            }
        }
    },
    "Description": "Pizza luvrs template with S3, RDS and DynamoDb integration. Fully fonctionnal"
}
